[package]
name = "rgb-lib-stress-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
chrono = "0.4.23"
grep-matcher = "0.1.5"
grep-regex = "0.1.10"
grep-searcher = "0.1.10"
rgb-lib = "0.1.6"
time = { version = "0.3.13", features = ["std"] }

[patch.crates-io]
rgb-core = { git = "https://github.com/zoedberg/rgb-core.git", branch = "debug_consignment_validation", version = "0.8.2" }
